# aruco-april-svgs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/tags/: dictionary.py  generate.py
tags/: generate.py
tests/: test_all_tags.py
