[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aruco-april-svgs"
version = "0.0.1"
authors = [
	{name="Michele Pratusevich", email="mprat@alum.mit.edu"}
]
description = "Python package to generate Aruco/April tags as SVGs"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
	"drawsvg~=2.3.0",
	"numpy",
	"opencv-contrib-python-headless~=4.8",
]