[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aruco-april-svgs"
version = "0.0.1"
authors = [
	{name="Michele Pratusevich", email="mprat@alum.mit.edu"}
]
description = "Python package to generate Aruco/April tags as SVGs"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
	"drawsvg~=2.3.0",
	"numpy",
	"opencv-contrib-python-headless~=4.8",
]

[project.optional-dependencies]
tests = [
	"cairosvg~=2.7",
	"pytest~=7.4"
]

[tool.pytest.ini_options]
addopts = "-sv"
testpaths = [
	"tests"
]
log_cli=true