[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aruco-april-svgs"
version = "0.0.1"
authors = [
	{name="Michele Pratusevich", email="mprat@alum.mit.edu"}
]
description = "Python package to generate Aruco/April tags as SVGs"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
	"drawsvg~=2.3.0",
	"numpy",
	"opencv-contrib-python-headless~=4.8",
]

[project.optional-dependencies]
tests = [
	"cairosvg~=2.7",
	"pytest~=7.4",
	"pytest-xdist~=3.3",
	"ruff"
]

[tool.pytest.ini_options]
addopts = "-sv -n 4"
testpaths = [
	"tests"
]
log_cli=true

[tool.ruff]
# E - pycodestyle errors
# W - pycodestyle warnings
# B - flake8-bugbear
# F - pyflakes
# I - isort
# RUF - ruff-specific rules
# NPY - numpy specific rules
# PL - pylint -- not enabled yet
# D - pydocstyle -- not enabled yet
select = ["E", "W", "B", "F", "I", "RUF", "NPY"]
line-length = 88  # same as Black
target-version = "py312"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
